--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>webtalo</title>
+    <title>getua</title>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@1.0.33/src/ua-parser.js"></script>
