--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>getua</title>
   </head>
-  <body>
+  <body style="word-break: normal;">
     <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@1.0.33/src/ua-parser.js"></script>
     <script src="main.js"></script>
   </body>
